// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`import symbol transform > should add .value to deep object import 1`] = `
"import { $a } from "./test";
<div>{$a.value.b.c.d.e.f}</div>;"
`;

exports[`import symbol transform > should add .value to object import 1`] = `
"import { $a } from "./test";
<div>{$a.value.b}</div>;"
`;

exports[`import symbol transform > should add .value to primitive import 1`] = `
"import $a from "./test";
<div>{$a.value}</div>;"
`;
